# dashing-board

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  clangd.bak  requirements.txt
.github/workflows/: compilation.yml  unit-tests.yml
DashingApp/: app.json  package-lock.json  package.json
DashingApp/android/: settings.gradle
DashingApp/android/app/: build.gradle
DashingApp/android/app/src/main/: AndroidManifest.xml
DashingApp/android/app/src/main/java/com/anonymous/DashingApp/: MainActivity.kt  MainApplication.kt
DashingApp/android/app/src/main/res/values/: strings.xml
DashingApp/app/: _layout.tsx
DashingApp/app/(tabs)/: _layout.tsx  index.tsx
DashingApp/components/: Arc.tsx  Bar.tsx
DashingApp/hooks/: useBLE.ts  useBleController.ts
ESP32/: .gitignore  platformio.ini
ESP32-controller/: platformio.ini
ESP32-controller/include/: CommunicatorMock.hpp  DataFrame.hpp  DataProvider.hpp  DiagnosticCommands.hpp  EcuMock.hpp  ICommunicator.hpp  Message.hpp  Parser.hpp  RequestHandler.hpp  Utils.hpp
ESP32-controller/lib/controller/: DataFrame.cpp  DataFrame.hpp  DataProvider.cpp  DataProvider.hpp  DiagnosticCommands.hpp  EcuCore.cpp  EcuCore.hpp  EcuMock.hpp  ICommunicator.hpp  Message.cpp  Message.hpp  Parser.hpp  RequestHandler.hpp  StateReader.cpp  StateReader.hpp  Utils.cpp  Utils.hpp
ESP32-controller/precompiled_lib/: libcontroller.dylib
ESP32-controller/src/: Profiler.h  SerialCommunicator.cpp  SerialCommunicator.hpp  main.cpp
ESP32/src/: Daemon.hpp.bak  DataFrame.cpp.bak  DataFrame.hpp.bak  Parser.cpp.bak  Parser.hpp.bak  RequestHandler.cpp.bak  RequestHandler.hpp.bak  Requests.hpp  main.cpp
controller/: .gitignore  CMakeLists.txt  libcontroller.dylib
controller/src/: CommunicatorMock.cpp  CommunicatorMock.hpp  Daemon.cpp.bak  DataFrame.cpp  DataFrame.hpp  DataProvider.cpp  DiagnosticCommands.hpp  EcuCore.cpp  EcuCore.hpp  EcuMock.hpp  ICommunicator.hpp  Message.cpp  Message.hpp  Parser.cpp  Parser.hpp  RequestHandler.cpp  RequestHandler.hpp  Requests.hpp  StateReader.cpp  StateReader.hpp  Utils.cpp  Utils.hpp  main.cpp  parser.cpp  parser.h  requests.h
controller/src/Communication/: ICommunicator.hpp
controller/src/Obd2Protocol/: DiagnosticCommands.hpp
controller/src/RequestHandler/: DataFrame.cpp  DataFrame.hpp  DiagnosticCommands.hpp  Message.cpp  Message.hpp  Parser.hpp  RequestHandler.hpp  StateReader.cpp  StateReader.hpp  Utils.hpp
controller/src/Server/: httplib.h  server.cpp
controller/src/Simulator/: Communicators.cpp  Communicators.hpp  DataLink.cpp  DataLink.hpp  DataProvider.cpp  DataProvider.hpp  DataSources.hpp  EcuMock.hpp  EcuResponder.cpp  EcuResponder.hpp  Simulator.hpp  TimeProvider.hpp
controller/tests/: CMakeLists.txt
controller/tests/controller/: CMakeLists.txt  main.cpp
esp32/: .clangd  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
esp32/.devcontainer/: Dockerfile
esp32/components/controller/: CMakeLists.txt
esp32/main/: BLEDataServer.cpp  BLEDataServer.hpp  CMakeLists.txt  CanHandler.hpp  CanSniffer.hpp  Comparator.hpp  DigitalSniffer.cpp  DigitalSniffer.hpp  MockHandler.hpp  SerialCommunicator.cpp  SerialCommunicator.hpp  SerialHandler.hpp  Sniffer.cpp  idf_component.yml  main.cpp
logging/: serialLogger.py
server/: CMakeLists.txt
server/src/: server.cpp
tests/controller/: CMakeLists.txt  main.cpp
